apps/homepage/deployment-router.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage-router
  labels:
    app: homepage-router
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homepage-router
  template:
    metadata:
      labels:
        app: homepage-router
    spec:
      automountServiceAccountToken: false
      priorityClassName: standard
      enableServiceLinks: false
      containers:
        - name: nginx
          image: nginx:1.31.6-alpine
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
              readOnly: true
          resources:
            requests:
              cpu: 5m
              memory: 16Mi
            limits:
              cpu: 100m
              memory: 64Mi
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            periodSeconds: 15
          startupProbe:
            httpGet:
              path: /healthz
              port: 8080
            periodSeconds: 5
            failureThreshold: 24
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            periodSeconds: 10
      volumes:
        - name: nginx-config
          configMap:
            name: homepage-router-config
