apps/homepage/service-limited.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage-limited
spec:
  selector:
    app: homepage-limited
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      name: http
  type: ClusterIP
