apps/homepage/service-router.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage-router
spec:
  selector:
    app: homepage-router
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: http
  type: ClusterIP
