apps/homepage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: default-authentik-auth@kubernetescrd
spec:
  ingressClassName: traefik-traefik
  tls:
  - hosts:
    - home.bstjohn.net
    secretName: wildcard-home-tls
  rules:
  - host: home.bstjohn.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homepage-router
            port:
              number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage-ext
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: default-authentik-auth-ext@kubernetescrd
spec:
  ingressClassName: traefik-traefik
  tls:
  - hosts:
    - ext.bstjohn.net
    secretName: wildcard-home-tls
  rules:
  - host: ext.bstjohn.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homepage-router
            port:
              number: 8080
